# ring-seq-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: RUNBOOK.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-circular-wrapper-and-no-std.md
examples/: bench_min_rotational_hamming.rs
src/: circular.rs  iterators.rs  lib.rs
tests/: algebra.rs
