[package]
name = "ring-seq"
version = "0.1.0"
edition = "2021"
authors = ["Mario Callisto <mario.callisto@proton.me>"]
description = "Circular (ring) sequence operations for Rust slices — rotations, reflections, necklace canonical forms, symmetry detection, and more."
license = "Apache-2.0"
repository = "https://github.com/scala-tessella/ring-seq"
keywords = ["circular", "ring", "sequence", "necklace", "symmetry"]
categories = ["algorithms", "data-structures"]
rust-version = "1.63"

[dependencies]
